@@ -1,3 +1,9 @@
+10/26/16
+  Added _getBytes() for sending/receiving data.  Should handle failure better
+
+08/17/16
+  Fixed tagIOI not dealing with greater than 4 byte tag index
+
 08/05/16
   Fixed derp with calling _getTagList
 
